...
import UIKit

class TravelScreenView: UIView {
    // MARK: - UI components
    var refreshControl = UIRefreshControl(title: "Загрузка...")

    var cityNameView = UIButton(title: "Выберите город",
                                image: UIImage(systemName: "flag"),
                                font: .smallButtonFont(),
                                cornerRadius: 0,
                                tintColor: .darkGray)

    private(set) lazy var collectionView: UICollectionView = {
...

    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    // MARK: - UITestsIdentifiers
    func configureViewForUITests() {
        accessibilityIdentifier = "travelScreenView"
        cityNameView.accessibilityIdentifier = "cityNameView"
        collectionView.accessibilityIdentifier = "travelCollectionView"
    }
}
// MARK: - Set up compositional layout
extension TravelScreenView {
...
