...
    func createViewControllers() -> [UIViewController] {
        var viewControllers = [UIViewController]()
        
        //1. TravelScreen
        let travelScreenViewController = TravelScreenViewController(requestFactory: requestFactory,
                                                                    userSettings: userSettings, dataProvider: travelDataProvider)
        travelScreenViewController.tabBarItem = UITabBarItem(title: "Путешествие",
                                                             image: UIImage(systemName: "figure.walk.diamond"),
                                                             selectedImage: UIImage(systemName: "figure.walk.diamond.fill"))
        let travelNavigationController = UINavigationController(rootViewController: travelScreenViewController)
        configureNavigationController(navigationController: travelNavigationController,
                                      tintColor: .systemBlue,
                                      barTintColor: .systemGray6,
...
        let mapScreenViewController = MapScreenViewController(
            requestFactory: requestFactory,
            dataProvider: mapScreenDataProvider)
        mapScreenViewController.tabBarItem = UITabBarItem(title: "Карта",
                                                          image: UIImage(systemName: "map"),
                                                          selectedImage: UIImage(systemName: "map.fill"))
        mapScreenViewController.tabBarItem.accessibilityIdentifier = "mapScreenTabBarItem"
        let mapScreenNavigationController = UINavigationController(rootViewController: mapScreenViewController)
        configureNavigationController(navigationController: mapScreenNavigationController,
                                      tintColor: .systemBlue,
                                      barTintColor: .systemGray6,
                                      prefersLargeTitles: false)
        viewControllers.append(mapScreenNavigationController)
...
