...
                                                                               backgroundColor: .systemGray6)
    
    private(set) lazy var searchTextField = UITextField(placeholder: "Введите место для поиска",
                                                        font: .smallTitleFont(),
                                                        borderStyle: .roundedRect)
    
    private(set) lazy var placesAndEventsTableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.backgroundColor = .white
        tableView.rowHeight = 40
        tableView.separatorStyle = .singleLine
        return tableView
...
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    //MARK: - Configuration Methods
    func configureViewForUITests() {
        accessibilityIdentifier = "onMapSliderScreenView"
        viewForTable.accessibilityIdentifier = "onMapSliderScreenViewForTableView"
        placesAndEventsTableView.accessibilityIdentifier = "placesAndEventsTableView"
    }
    
    func configureUI() {
        backgroundColor = .white
...
